--- a/about.html
+++ b/about.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <header>
-      <div class="button" id="homeCurrent">
+      <div class="button" id="home">
         <a href="index.html" class="fill"></a>
       </div>
-      <div class="button" id="about">
+      <div class="button" id="aboutCurrent">
         <a href="about.html" class="fill"></a>
       </div>
     </header>
@@ -21,16 +21,8 @@
 
     <main>
       <div class="MainBox">
-        <h1>Home</h1>
-        This is a web page about things and stuff.
-        <table>
-          <title>This is a table</title>
-          <tr><th>A</th><th>B</th><th>C</th><th>D</th><th>E</th></tr>
-          <tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td></tr>
-          <tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td></tr>
-          <tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td></tr>
-          <tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td></tr>
-        </table>
+        <h1>About me</h1>
+        I am a human male studying game programming.
       </div>
       <div class="sidebar">
         This is a sidebar. Don't get too distracted!
