--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, intitial-scale=1, shrink-to-fit=no">
       <title>Title</title>
-      <link rel="Stylesheet" href="style.css">
+      <link rel="Stylesheet" href="/style.css">
   </head>
   <body>
     <header>
