--- a/about.html
+++ b/about.html
@@ -22,14 +22,14 @@
     <main>
       <div class="MainBox">
         <h1>About me</h1>
-        I am a human male studying game programming.
+        My name is Simon Ektjärn and I am a human male studying game programming.
       </div>
       <div class="sidebar">
         This is a sidebar. Don't get too distracted!
       </div>
 
       <footer>
-        <small>This text is small.</small>
+        <small>This text is small. Made by me. Some rights reserved.</small>
       </footer>
     </main>
    </body>
