--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 
       <footer>
-        <small>This text is small.</small>
+        <small>This text is small. Made by me. Some rights reserved.</small>
       </footer>
     </main>
    </body>
